--- a/style.css
+++ b/style.css
@@ -30,7 +30,12 @@
     background-color: rgb(252, 250, 250);
 }
 .btn1{
-    border: 2px solid rgb(172, 5, 5) !important;  
+    border: 2px solid rgb(172, 5, 5) !important;
+     
+}
+.btn1 a{
+    text-decoration: none; 
+    color: white;
 }
 
 .btn1:hover{
